Fixed project-canvas overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -352,8 +352,7 @@ footer a:hover {
 			"p ";
 		width: 100%;
 		height: 100%;
-		overflow-y: scroll;
-		overflow-x: hidden;
+		overflow: hidden;
 	}
 
 	.project-list {
@@ -380,7 +379,7 @@ footer a:hover {
 	.nav-menu {
 		position: fixed;
 		left: -100%;
-		top: var(--nav-height);
+		top: calc(var(--nav-height) + 1rem);
 		flex-direction: column;
 		background-color: var(--background-color);
 		width: 100%;
